--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="icon" href="./images/bhaira-logo.svg" />
+    <title>Made By Bhaira Agency</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
